cluster/apps/monitoring/kube-prometheus-stack/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prometheus.${SECRET_DOMAIN}`)
    kind: Rule
    priority: 10
    services:
    - name: prometheus-operated
      namespace: monitoring
    middlewares:
    - name: rfc1918
  tls:
    secretName: "${SECRET_DOMAIN/./-}"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`alertmanager.${SECRET_DOMAIN}`)
    kind: Rule
    priority: 10
    services:
    - name: alertmanager-operated
      namespace: monitoring
    middlewares:
    - name: rfc1918
  tls:
    secretName: "${SECRET_DOMAIN/./-}"
